--- a/.gitattributes
+++ b/.gitattributes
@@ -1,6 +1,7 @@
 # Ignore all JavaScript and EJS files for language stats
 *.js linguist-vendored
 *.ejs linguist-vendored
+*.css linguist-vendored
 
 # (Optional) If there are other JS-like files, add them too
 *.jsx linguist-vendored
@@ -9,4 +10,4 @@
 # Ensure F# and CSS are recognized (you don’t necessarily need this if they’re detected correctly)
 *.fs linguist-language=F#
 *.fsx linguist-language=F#
-*.css linguist-language=CSS
+*.ejs linguist-language=EJS
